":sparkles: Add new context menu options for components"

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -4289,6 +4289,10 @@ msgid "workspace.shape.menu.show"
 msgstr "Show"
 
 #: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
+msgid "workspace.shape.menu.show-in-assets"
+msgstr "Show in assets panel"
+
+#: src/app/main/ui/workspace/sidebar/options/menus/component.cljs, src/app/main/ui/workspace/context_menu.cljs
 msgid "workspace.shape.menu.show-main"
 msgstr "Show main component"
 
