Fix link in French translation of empty project

--- a/frontend/translations/fr.po
+++ b/frontend/translations/fr.po
@@ -279,8 +279,8 @@ msgstr "Vous n’avez encore aucun fichier ici"
 msgid "dashboard.empty-placeholder-drafts"
 msgstr ""
 "Oh non ! Vous n'avez pas encore de fichiers ! Si vous voulez essayer avec "
-"des modèles, allez sur [Bibliothèques et modèles] "
-"(https://penpot.app/libraries-templates.html)"
+"des modèles, allez sur "
+"[Bibliothèques et modèles](https://penpot.app/libraries-templates.html)"
 
 msgid "dashboard.export-binary-multi"
 msgstr "Télécharger %s fichiers Penpot (.penpot)"
