--- a/frontend/translations/ml.po
+++ b/frontend/translations/ml.po
@@ -246,7 +246,7 @@ msgstr ""
 "വിഭാഗത്തിലേക്ക്] (https://penpot.app/libraries-templates.html) പോകാവുന്നതാണ്"
 
 msgid "dashboard.export-frames"
-msgstr "ആർട്ട്ബോർഡുകൾ പിഡിഎഫായി എക്സ്പോർട്ട് ചെയ്യുക...."
+msgstr "ആർട്ട്ബോർഡുകൾ പിഡിഎഫായി എക്സ്പോർട്ട് ചെയ്യുക"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
