--- a/frontend/translations/zh_Hant.po
+++ b/frontend/translations/zh_Hant.po
@@ -238,7 +238,7 @@ msgstr ""
 "模板區段](https://penpot.app/libraries-templates.html)"
 
 msgid "dashboard.export-frames"
-msgstr "將 artboards 匯出為 PDF..."
+msgstr "將 boards 匯出為 PDF"
 
 msgid "dashboard.export-multi"
 msgstr "匯出 %s 個檔案"
