--- a/frontend/translations/it.po
+++ b/frontend/translations/it.po
@@ -278,7 +278,7 @@ msgid "dashboard.export-binary-multi"
 msgstr "Scarica %s file Penpot (.penpot)"
 
 msgid "dashboard.export-frames"
-msgstr "Esportare le tavole da disegno in PDF…"
+msgstr "Esportare le tavole da disegno in PDF"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
