--- a/frontend/translations/pl.po
+++ b/frontend/translations/pl.po
@@ -243,7 +243,7 @@ msgstr ""
 "szablony](https://penpot.app/libraries-templates.html)"
 
 msgid "dashboard.export-frames"
-msgstr "Eksportuj obszary kompozycji do PDF…"
+msgstr "Eksportuj obszary kompozycji do PDF"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
