:bug: Fix some typos

--- a/frontend/translations/ca.po
+++ b/frontend/translations/ca.po
@@ -242,7 +242,7 @@ msgstr ""
 "plantilles](https://penpot.app/libraries-templates.html)"
 
 msgid "dashboard.export-frames"
-msgstr "Exporta les taules de treball a PDF..."
+msgstr "Exporta les taules de treball a PDF"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
