--- a/frontend/translations/fa.po
+++ b/frontend/translations/fa.po
@@ -246,7 +246,7 @@ msgstr ""
 "(https://penpot.app/libraries-templates.html)"
 
 msgid "dashboard.export-frames"
-msgstr "خروجی آرت‌بوردها به پی‌دی‌اف…"
+msgstr "خروجی آرت‌بوردها به پی‌دی‌اف"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
