--- a/frontend/translations/he.po
+++ b/frontend/translations/he.po
@@ -236,7 +236,7 @@ msgstr ""
 "והתבניות](https://penpot.app/libraries-templates.html)"
 
 msgid "dashboard.export-frames"
-msgstr "ייצוא לוחות אומנות ל־PDF…"
+msgstr "ייצוא לוחות אומנות ל־PDF"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
