--- a/frontend/translations/tr.po
+++ b/frontend/translations/tr.po
@@ -244,7 +244,7 @@ msgstr ""
 "sayfasına gidin"
 
 msgid "dashboard.export-frames"
-msgstr "Çalışma yüzeylerini PDF'ye aktar…"
+msgstr "Çalışma yüzeylerini PDF'ye aktar"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
