--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -280,7 +280,7 @@ msgid "dashboard.export-binary-multi"
 msgstr "Download %s Penpot files (.penpot)"
 
 msgid "dashboard.export-frames"
-msgstr "Export artboards to PDF…"
+msgstr "Export artboards to PDF"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
@@ -2373,7 +2373,7 @@ msgid "shortcuts.toggle-lock-size"
 msgstr "Lock proportions"
 
 msgid "shortcuts.toggle-rules"
-msgstr "Show/hide rules"
+msgstr "Show/hide rulers"
 
 msgid "shortcuts.toggle-scale-text"
 msgstr "Toggle scale text"
@@ -2776,7 +2776,7 @@ msgstr "Hide pixel grid"
 
 #: src/app/main/ui/workspace/header.cljs
 msgid "workspace.header.menu.hide-rules"
-msgstr "Hide rules"
+msgstr "Hide rulers"
 
 #: src/app/main/ui/workspace/header.cljs
 msgid "workspace.header.menu.hide-textpalette"
@@ -2823,7 +2823,7 @@ msgstr "Show pixel grid"
 
 #: src/app/main/ui/workspace/header.cljs
 msgid "workspace.header.menu.show-rules"
-msgstr "Show rules"
+msgstr "Show rulers"
 
 #: src/app/main/ui/workspace/header.cljs
 msgid "workspace.header.menu.show-textpalette"
