--- a/frontend/translations/el.po
+++ b/frontend/translations/el.po
@@ -173,7 +173,7 @@ msgstr "(Αντίγραφο)"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.create-new-team"
-msgstr "+ Δημιουργία νέας ομάδας"
+msgstr "Δημιουργία νέας ομάδας"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.default-team-name"
