--- a/frontend/translations/he.po
+++ b/frontend/translations/he.po
@@ -237,7 +237,7 @@ msgstr "(עותק)"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.create-new-team"
-msgstr "+ יצירת צוות חדש"
+msgstr "יצירת צוות חדש"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.default-team-name"
