--- a/frontend/translations/id.po
+++ b/frontend/translations/id.po
@@ -237,7 +237,7 @@ msgstr "(salin)"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.create-new-team"
-msgstr "+ Buat tim baru"
+msgstr "Buat tim baru"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.default-team-name"
