--- a/frontend/translations/ml.po
+++ b/frontend/translations/ml.po
@@ -212,7 +212,7 @@ msgstr "(പകർത്തുക)"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.create-new-team"
-msgstr "+ പുതിയ സംഘം രൂപീകരിക്കുക"
+msgstr "പുതിയ സംഘം രൂപീകരിക്കുക"
 
 #: src/app/main/ui/dashboard/sidebar.cljs
 msgid "dashboard.default-team-name"
